beta-1.2 add company slider

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -12,30 +12,43 @@
 
   --first-border-color: rgb(46, 46, 46);
   --second-border-color: rgb(59, 59, 59);
-  
+
   --first-text-color: rgb(230, 230, 230);
   --second-text-color: rgb(160, 160, 160);
-  
+
   --header-link-color: #ffffff;
   --header-link-color-active: #6200ff;
 
   --link-color: #6200ff;
-  --link-color-hover: #a51dff; 
+  --link-color-hover: #a51dff;
 
   --first-bg-effect-color: #6200ff;
   --second-bg-effect-color: #bd93ff;
   --thirt-bg-effect-color: #decaff;
 }
 
-*{
+* {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  
-  -webkit-touch-callout: none; /* Отключение контекстного меню на iOS */
-  -webkit-user-drag: none;     /* Отключение перетаскивания в Safari */
-  -khtml-user-drag: none;      /* Отключение перетаскивания в Konqueror */
-  -moz-user-drag: none;        /* Отключение перетаскивания в Firefox */
-  -o-user-drag: none;          /* Отключение перетаскивания в Opera */
+
+  -webkit-touch-callout: none;
+  /* Отключение контекстного меню на iOS */
+  -webkit-user-drag: none;
+  /* Отключение перетаскивания в Safari */
+  -khtml-user-drag: none;
+  /* Отключение перетаскивания в Konqueror */
+  -moz-user-drag: none;
+  /* Отключение перетаскивания в Firefox */
+  -o-user-drag: none;
+  /* Отключение перетаскивания в Opera */
+}
+
+
+.my-swiper-container .swiper-wrapper {
+  /* Заставляет движение быть постоянным и равномерным */
+  transition-timing-function: linear !important;
+  /* Делает слайды в одну линию без переноса */
+  flex-wrap: nowrap !important;
 }
